--- a/App/ClientApp/src/app/dashboard-designer/view-dashboard-designer/view-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/view-dashboard-designer/view-dashboard-designer.component.html
@@ -21,8 +21,8 @@
     <div class="widget-container">
       <gridster [options]="options">
         <gridster-item  [item]="item" *ngFor="let item of widgetsGridsterItemArray">
-          <button class='fa fa-gear mr-3 widget-action' (click)="isImageConfigForm(item.widgetId, item.widgetItemCount)" *ngIf="item.value=='image'"></button>
-          <button class='fa fa-gear mr-3 widget-action' (click)="isVideoConfigForm(item.widgetId, item.widgetItemCount)" *ngIf="item.value=='video'"></button>
+          <button class='fa fa-gear mr-3 widget-action' (click)="isImageConfigForm(item.widgetId, item.widgetItemCount)" *ngIf="item.value=='Image'"></button>
+          <button class='fa fa-gear mr-3 widget-action' (click)="isVideoConfigForm(item.widgetId, item.widgetItemCount)" *ngIf="item.value=='Video'"></button>
           <ndc-dynamic [ndcDynamicComponent]="item.component"></ndc-dynamic>
       </gridster-item>
       </gridster>
