--- a/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
+++ b/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
@@ -151,18 +151,18 @@
       <!--[ngClass]="filterClass"-->
       <div class="filter-footer">
         <ul class="nav">
-          <li class="nav-item width33" title="Search" (click)="searchStatementRecordFilter('search')">
-            <a class="nav-link p-0">
+          <li class="nav-item width33" title="Search" >
+            <button class="btn-footer-fill btn-block rounded-0 height100" [disabled]="filterToDateError || filterFromDateError" (click)="searchStatementRecordFilter('search')">
               <span class="fa fa-check"></span>
-            </a>
+            </button>
           </li>
-          <li class="nav-item width33" title="Reset" (click)="searchStatementRecordFilter('reset')">
-            <a class="nav-link p-0">
+          <li class="nav-item width33" title="Reset"  (click)="searchStatementRecordFilter('reset')">
+            <a class="nav-link p-0"  >
               <span class="fa fa-refresh"></span>
             </a>
           </li>
           <li class="nav-item width33" title="Close" (click)="closeFilter()">
-            <a class="nav-link p-0">
+            <a class="nav-link p-0"  >
               <span class="fa fa-close"></span>
             </a>
           </li>
