--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -95,6 +95,6 @@
 </div>
 <div class="content-wapper" [ngClass]="collapse_class">
   <router-outlet></router-outlet>
-  <div class="ftr-vrsn">V.{{AppVersion}}</div>
+  <div class="ftr-vrsn">V{{AppVersion}}</div>
 </div>
 
