--- a/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
+++ b/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
@@ -135,6 +135,7 @@
           </div>
         </div>
         <div class="form-group">
+          <label>End Date</label>
           <div class="position-relative">
             <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filterPublishedOnToDate"
                    placeholder="Please select end date" readonly (ngModelChange)="onPublishedFilterDateChange($event)">
