--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -10,9 +10,9 @@
 
   <ul class='nav nav-toolbar float-right' [ngClass]="isTopbarShow? 'show':'hide'">
     <li class="nav-item">
-      <a class="nav-link top-nav-link" id="settingsSideBar" title="Asset Configuration Settings" (click)="ChangeSideBar()">
+      <a class="nav-link top-nav-link" id="settingsSideBar"  (click)="ChangeSideBar()">
         <span></span>
-        <i class="fa fa-cog"></i>
+        <i class="fa fa-cog" ></i>
       </a>
     </li>
     <li class="nav-item dropdown float-right">
@@ -33,9 +33,9 @@
   <!--mobile end-->
   <ul class='nav nav-toolbar float-right show-toolbar'>
     <li class="nav-item">
-      <a class="nav-link top-nav-link" id="settingsSideBar" title="Asset Configuration Settings" (click)="ChangeSideBar()">
+      <a class="nav-link top-nav-link" id="settingsSideBar"  (click)="ChangeSideBar()">
         <span></span>
-        <i id ="HomeSettingIcon"class="fa fa-cog"></i>
+        <i id ="HomeSettingIcon"class="fa fa-cog"  title="Asset Configuration Settings"></i>
       </a>
     </li>
     <li class="nav-item dropdown">
