--- a/App/ClientApp/src/app/layout/asset-libraries/add-asset-library/add-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/add-asset-library/add-asset-library.component.html
@@ -9,15 +9,15 @@
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-body p-1">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" (click) ="closePreview()" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
           <!--Image-->
-          <img class="card-img-top height100" src="assets/images/loginbg.jpg" />
+          <img class="card-img-top height100" [src]="image" *ngIf="isImage"/>
           <!--video-->
-          <!--<video class="width100 height100" style="object-fit:fill" autoplay controls>
-            <source src="assets/docs/SampleVideo.mp4" type="video/mp4">
-          </video>-->
+          <video class="width100 height100" style="object-fit:fill" autoplay controls *ngIf="!isImage">
+            <source [src]="image" type="video/mp4">
+          </video>
         </div>
       </div>
     </div>
@@ -136,7 +136,7 @@
             <th class="width12" mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
-                <button type="button" title="Preview" id="btnView" data-toggle="modal" data-target="#resourcePreview"><span class="fa fa-file-text-o"></span></button>
+                <button type="button" title="Preview" id="btnView" data-toggle="modal" (click)="PreviewAsset(element)" data-target="#resourcePreview"><span class="fa fa-file-text-o"></span></button>
                 <button type="button" title="Download" (click)="DownloadAsset(element.Identifier)" id="btnUpdate"><span class="fa fa-download"></span></button>
                 <button type="button" title="Delete" (click)="DeleteAsset(element.Identifier)" id="btnDelete"><span class="fa fa-trash-o"></span></button>
               </div>
