--- a/App/ClientApp/src/app/layout/asset-libraries/view-asset-library/view-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/view-asset-library/view-asset-library.component.html
@@ -2,6 +2,23 @@
   <div class="page-title">
     <span class="xs-title"> Asset Library Details</span>
   </div>
+  <div class="modal fade cust-modal bd-example-modal-lg" id="resourcePreview" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-body p-1">
+          <button type="button" (click)="closePreview()" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <!--Image-->
+          <img class="card-img-top height100" [src]="image" *ngIf="isImage" />
+          <!--video-->
+          <video class="width100 height100" style="object-fit:fill" autoplay controls *ngIf="!isImage">
+            <source [src]="image" type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="card border-0 mb-2 card-shadow">
     <div class="card-header bg-white d-flex justify-content-between">
       <div>
@@ -89,6 +106,7 @@
           <th class="width5" mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
           <td mat-cell *matCellDef="let element">
             <div class="action-btns btn-tbl-action">
+              <button type="button" title="Preview" id="btnView" data-toggle="modal" (click)="PreviewAsset(element)" data-target="#resourcePreview"><span class="fa fa-file-text-o"></span></button>
               <button type="button" title="Download" (click)="DownloadAsset(element.Identifier)" id="btnUpdate"><span class="fa fa-download"></span></button>
             </div>
           </td>
@@ -103,8 +121,8 @@
   </div>
   <div class="card border-0 mt-4 mb-3 bg-transparent">
     <div class="card-body p-0">
-      <button class="btn-footer-fill mr-2" id="btnSave" (click)="navigateToAssetLibraryEdit()" >Update</button>
-      <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete" (click)="deleteAssetLibrary()" >Delete</button>
+      <button class="btn-footer-fill mr-2" id="btnSave" (click)="navigateToAssetLibraryEdit()">Update</button>
+      <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete" (click)="deleteAssetLibrary()">Delete</button>
       <button class="btn-footer-outline" id="btnCancel" (click)="navigateToListPage()">Cancel</button>
     </div>
   </div>
