--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -1547,6 +1547,10 @@
     position: relative;
   }
 
+  .ht70px {
+    height: 70px;
+  }
+
   .list-middle-row {
     width: 100%;
     height: auto;
