--- a/App/ClientApp/src/app/layout/asset-libraries/view-asset-library/view-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/view-asset-library/view-asset-library.component.html
@@ -2,7 +2,7 @@
   <div class="page-title">
     <span class="xs-title"> Asset Library Details</span>
   </div>
-  <div class="modal fade cust-modal bd-example-modal-lg" id="resourcePreview" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade cust-modal bd-example-modal-lg" id="resourcePreview" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-body p-1">
@@ -12,7 +12,7 @@
           <!--Image-->
           <img class="card-img-top height100" [src]="image" *ngIf="isImage" />
           <!--video-->
-          <video class="width100 height100" style="object-fit:fill" autoplay controls *ngIf="!isImage">
+          <video id="videoPreview"class="width100 height100" style="object-fit:fill" autoplay controls *ngIf="!isImage">
             <source [src]="image" type="video/mp4">
           </video>
         </div>
