--- a/App/ClientApp/src/app/layout/template/list/list.component.html
+++ b/App/ClientApp/src/app/layout/template/list/list.component.html
@@ -50,7 +50,7 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="date">
-          <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef> Published Date </th>
+          <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Published Date </th>
           <td mat-cell *matCellDef="let element"> 
             <span *ngIf='element.PublishedOn!="0001-01-01T00:00:00"'>{{element.PublishedOn | date : "dd/MM/yyyy" }} </span>
             <span *ngIf='element.PublishedOn=="0001-01-01T00:00:00"'> - </span>
