--- a/App/ClientApp/src/app/layout/statement-defination/view/view.component.html
+++ b/App/ClientApp/src/app/layout/statement-defination/view/view.component.html
@@ -39,9 +39,7 @@
               <h6>{{statement.StatementOwnerName}}</h6>
               <div><label class="mb-0">Date : </label><span class="ml-1">{{statement.CreatedDate | date:"dd/MM/yyyy"}}</span></div>
               <div>
-                <label>Status : </label>
-                <span class="badge badge-primary p-1" *ngIf="statement.Status=='New'">{{statement.Status}}</span>
-                <span class="badge badge-success p-1" *ngIf="statement.Status=='Published'">{{statement.Status}}</span>
+                <label>Status :  </label><span class="badge badge-primary p-1" *ngIf="statement.Status=='New'"> {{statement.Status}}</span><span class="badge badge-success p-1" *ngIf="statement.Status=='Published'"> {{statement.Status}}</span>
               </div>
             </div>
 
