--- a/App/ClientApp/src/app/dashboard-designer/view-dashboard-designer/view-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/view-dashboard-designer/view-dashboard-designer.component.html
@@ -23,6 +23,8 @@
         <gridster-item  [item]="item" *ngFor="let item of widgetsGridsterItemArray">
           <button class='fa fa-gear mr-3 widget-action' (click)="isImageConfigForm(item.widgetId, item.widgetItemCount)" *ngIf="item.value=='Image'"></button>
           <button class='fa fa-gear mr-3 widget-action' (click)="isVideoConfigForm(item.widgetId, item.widgetItemCount)" *ngIf="item.value=='Video'"></button>
+          <vidyo [item]='item' [widgetsGridsterItemArray]='widgetsGridsterItemArray' *ngIf="item.value=='Video'"></vidyo>
+          <image [item]='item' [widgetsGridsterItemArray]='widgetsGridsterItemArray' *ngIf="item.value=='Image'"></image>
           <ndc-dynamic [ndcDynamicComponent]="item.component"></ndc-dynamic>
       </gridster-item>
       </gridster>
