--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -866,6 +866,11 @@
     width: 95%;
   }
 
+  .video-widget {
+    float: right;
+    width: 95%;
+  }
+
   .paddine-left-10 {
     padding-left: 10px;
   }
