Asset library changes

--- a/App/ClientApp/src/app/layout/asset-libraries/add-asset-library/add-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/add-asset-library/add-asset-library.component.html
@@ -185,7 +185,7 @@
 
           </div>
           <div>
-            <label style="font-size:11px">Supported file formats : {{setting.ImageFileExtension}},{{setting.VideoFileExtension}}</label>
+            <label style="font-size: 11px;margin-top: 7px;">Supported file formats : {{supportedFiles}}</label>
           </div>
         </div>
         <div class="form-group col-sm-12 parent-rtl">
