--- a/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
@@ -7,7 +7,7 @@
     <div>
       <button class="btn-add btn-cust" id="btnAddUsers" (click)="navigateToScheduleAdd()"
               *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Create' }))">
-        <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Asset Schedule
+        <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Schedule
       </button>
 
     </div>
@@ -34,19 +34,22 @@
           <!-- Name Column -->
           <ng-container matColumnDef="schedule">
             <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Defination </th>
-            <td mat-cell *matCellDef="let element"> {{element.StatementDefinition.Name}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.Statement.Name}} </td>
           </ng-container>
 
           <!-- Weight Column -->
           <ng-container matColumnDef="startDate">
             <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.StartDate}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.StartDate  | date:"dd/MM/yyyy"}}</td>
           </ng-container>
 
           <!-- Symbol Column -->
           <ng-container matColumnDef="endDate">
             <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.EndDate}} </td>
+            <td mat-cell *matCellDef="let element">
+              <span *ngIf='element.EndDate!="0001-01-01T00:00:00"'> {{element.EndDate  | date:"dd/MM/yyyy"}}</span>
+              <span *ngIf='element.EndDate=="0001-01-01T00:00:00"'> - </span>
+            </td>
           </ng-container>
 
           <ng-container matColumnDef="DayOfMonth">
@@ -55,23 +58,25 @@
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+            <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
                 <button type="button" id="btnViewRole" title="View Asset Library" (click)="navigateToScheduleView(element)"
-                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'View' }))">
+                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'View' }))">
                   <span class="fa fa-file-text-o"></span>
                 </button>
                 <button type="button" id="btnUpdateRole" title="Update Asset Library" (click)="navigateToScheduleEdit(element)"
-                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Edit' }))">
+                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))">
                   <span class="fa fa-pencil-square-o"></span>
                 </button>
                 <button type="button" id="btnDeleteRole" (click)="deleteSchedule(element)"
-                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Delete' }))">
+                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Delete' }))">
                   <span class="fa fa-trash-o"></span>
                 </button>
                 <button type="button" title="History" id="btnDelete" routerLink="History"><span class="fa fa-history"></span></button>
-                <button type="button" title="Activate"><span class="fa fa-toggle-on"></span></button>
+                <button type="button" (click)="activeDeactiveSchedule(element)" title="Deactivate" *ngIf="element.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))"><span class="fa fa-toggle-on text-success"></span></button>
+                <button type="button" (click)="activeDeactiveSchedule(element)" title="Activate" *ngIf="!element.IsActive && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Edit' }))"><span class="fa fa-toggle-off text-success"></span></button>
+
               </div>
             </td>
           </ng-container>
@@ -95,7 +100,7 @@
         </div>
         <div class="form-group">
           <label>Statement Defination</label>
-          <input type="text" class="form-control">
+          <input type="text" class="form-control" formControlName="filterStatementDefiniton">
         </div>
         <div class="form-group">
           <label>Start Date</label>
@@ -130,11 +135,11 @@
       <div class="filter-footer">
         <ul class="nav">
           <li class="nav-item width33" title="Search">
-            <a class="nav-link p-0">
+            <button class="btn-footer-fill btn-block rounded-0 height100" [disabled]="filterToDateError || filterFromDateError" (click)="searchScheduleRecordFilter('search')">
               <span class="fa fa-check"></span>
-            </a>
+            </button>
           </li>
-          <li class="nav-item width33" title="Reset">
+          <li class="nav-item width33" title="Reset" (click)="searchScheduleRecordFilter('reset')">
             <a class="nav-link p-0">
               <span class="fa fa-refresh"></span>
             </a>
