--- a/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
@@ -7,40 +7,45 @@
       <div class="row form-group">
         <div class="col-md-4 col-lg-4">
           <label id="lblName" for="inputRoleName">Name</label>
-          <div>SM 01</div>
+          <div>{{schedule.Name}}</div>
         </div>
         <div class="col-md-4 col-lg-4">
           <label id="lblTemplate" for="inputRoleName">Statement Defination</label>
-          <div>SD 01</div>
+          <div>{{schedule.Statement.Name}}</div>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4 col-lg-4 form-group">
           <label id="lblTemplate" for="inputRoleName">Day of Month</label>
-          <div>29</div>
+          <div>{{schedule.DayOfMonth}}</div>
         </div>
         <div class="col-md-4 col-lg-4 form-group">
           <label id="lblTemplate" for="inputRoleName">Time for the day (HH : MM) </label>
-          <div>02:20</div>
+          <div>{{schedule.HourOfDay}}:{{schedule.MinuteOfDay}}</div>
 
         </div>
       </div>
       <div class="row">
         <div class="col-md-4 col-lg-4 form-group">
           <label>Start Date</label>
-          <div>01/02/2020</div>
+          <div>{{schedule.StartDate  | date:"dd/MM/yyyy"}}</div>
         </div>
         <div class="col-md-4 col-lg-4 form-group">
           <label>End Date</label>
-          <div>02/02/2020</div>
+          <div>
+            <span *ngIf='schedule.EndDate.toString()!="0001-01-01T00:00:00"'> {{schedule.EndDate  | date:"dd/MM/yyyy"}}</span>
+            <span *ngIf='schedule.EndDate.toString()=="0001-01-01T00:00:00"'> - </span>
+          </div>
         </div>
       </div>
     </div>
   </div>
   <div class="card border-0 mt-4 mb-3 bg-transparent">
     <div class="card-body p-0">
-      <button class="btn-footer-fill mr-2" id="btnSave">Update</button>
-      <button class="btn-footer-fill-delete bg-danger mr-2" id="btnDelete">Delete</button>
+      <button class="btn-footer-fill mr-2" id="btnSave" (click)="navigateToScheduleEdit()"
+              *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Edit' }))">Update</button>
+      <button class="btn-footer-fill-delete bg-danger mr-2" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Delete' }))"
+              id="btnDelete" (click)="deleteSchedule()">Delete</button>
       <button class="btn-footer-outline" id="btnCancel" (click)="navigateToListPage()">Cancel</button>
     </div>
   </div>
